--- a/Homepage.html
+++ b/Homepage.html
@@ -8,6 +8,6 @@
     </nav>
     <h1>Soraski Hina is big cutie</h1>
     <h2>My HinaMyBeloved Homepage</h2>
-    <p>This is the paragraph written for my UECS2363 first practical on Git and Github.</p>
+    <p>This is the paragraph written for my UECS2363 SCC first practical on Git and Github.</p>
   </body>
 </html>
