--- a/Homepage.html
+++ b/Homepage.html
@@ -9,6 +9,6 @@
     <h1>Soraski Hina is big cutie</h1>
     <h2>My HinaMyBeloved Homepage</h2>
     <p>This is the paragraph written for my UECS2363 Software Constuction and Configuration</p>
-    <p>first practical on Git and Github.</p>
+    <p>First practical on Git and Github.</p>
   </body>
 </html>
